# SpeechPlugin.macos

./: CMakeLists.txt  README.md
src/: SpeechPlugin.mm
